--- a/MR/templates/entrance-2.html
+++ b/MR/templates/entrance-2.html
@@ -6,36 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="http://unpkg.com/aframe-arrow-component/"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="../templates/css/main.css">
+    <script src="../templates/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entrance-1" src="/assets/360 img/ENTRANCE-1.jpg">
-            <img id="exit" src="/assets/icon/EXIT.png">
-    
-            <img id="entrance-in" src="/assets/icon/ENTERANCE-IN-1.png">
-            <img id="entrance" src="/assets/360 img/ENTRANCE-CENTER.jpg">
-            <img id="exit" src="/assets/360 img/ENTRANCE.jpg">
+            <img id="entrance-1" src="../templates/assets/360 img/ENTRANCE-1.jpg">
+            <img id="exit" src="../templates/assets/icon/EXIT.png">
+            <img id="arrow" src="../templates/assets/icon/arrow.png">
+           
+            <img id="entrance" src="../templates/assets/ENTRANCE-CENTER.jpg">
+            <img id="exit" src="../templates/assets/360 img/ENTRANCE.jpg">
             
         </a-assets>
+        
+        
+       
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#entrance-1">
-            <a-text font="aileronsemibold" value="Entrance" width="6" position="-3.05637 0.62386 2.37734" scale="1 1 0.94" rotation="-1.93 -54.02 -0.51" text="align: center; color: #ffffff; side: back" visible=""></a-text>
+           
             <a-text font="aileronsemibold" value="Main-Entrance-Exit" width="6" position="2.69948 0.65198 -3.06196" scale="-0.71 0.73 -6.55" rotation="-1.9100000000000001 -55.51 -0.51" text="align: center; color: #ffffff; side: back" visible=""></a-text>
-            
-            <a-entity id="entrance-in" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-23.92313 0.556 17.9035" rotation="0.207410721837358 -64.6 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: entrance.html"></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-32.7857 1.85084 -23.61219" rotation="1.17741 -136.64 0.56651" scale="-1.51 1.18 1.51" cursor-listener="" link="href: entrance.html"></a-entity>
             <a-entity id="exit" geometry="height: 6; width: 6" material="src: #exit; transparent: true; emissiveIntensity: 0" position="22.25924 0.72218 -23.979" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: main_entrance.html"></a-entity>
               </a-sky>
               
-    </a-scene>
 
+              
+    </a-scene>
+     
 </body>
 
 </html>
