--- a/MR/templates/entrance-2.html
+++ b/MR/templates/entrance-2.html
@@ -7,22 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="../templates/css/main.css">
+    
+    <script src="../templates/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entrance-1" src="/assets/360 img/ENTRANCE-1.jpg">
-            <img id="exit" src="/assets/icon/EXIT.png">
+            <img id="entrance-1" src="../templates/assets/360 img/ENTRANCE-1.jpg">
+            <img id="exit" src="../templates/assets/icon/EXIT.png">
     
-            <img id="entrance-in" src="/assets/icon/ENTERANCE-IN-1.png">
-            <img id="entrance" src="/assets/360 img/ENTRANCE-CENTER.jpg">
-            <img id="exit" src="/assets/360 img/ENTRANCE.jpg">
+            <img id="entrance-in" src="../templates/assets/icon/ENTERANCE-IN-1.png">
+            <img id="entrance" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
+            <img id="exit" src="../templates/assets/360 img/ENTRANCE.jpg">
             
         </a-assets>
+        
+        
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
