--- a/MR/templates/right-center.html
+++ b/MR/templates/right-center.html
@@ -19,15 +19,15 @@
     
             <img id="center" src="../templates/assets/icon/ENTRANCE-RIGHT-IN-GATE.png">
             
-            <img id="last" src="../templates/assets/icon/EXIT-ENTANCE.png">
+            <img id="arrow" src="../templates/assets/icon/arrow.png">
              
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#right-center">
-            <a-entity id="center" geometry="height: 6; width: 6" material="src:#center; transparent: true; emissiveIntensity: 0" position="-24.60954 6.38933 45.6861" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener=""></a-entity>
-            <a-entity id="last" geometry="height: 6; width: 6" material="src:#last; transparent: true; emissiveIntensity: 0" position="13.84898 2.32813 -18.24556" rotation="0.207410721837358 126.69000000000001 -0.02349126960036375" scale="1 1 -0.06" cursor-listener="" link="href: right_entrance.html"></a-entity>
+            <a-entity id="center" geometry="height: 6; width: 6" material="src:#center; transparent: true; emissiveIntensity: 0" position="-24.60954 6.38933 45.6861" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: right-exit-1.html"></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="12.61427 1.50723 -18.48462" rotation="0.207410721837358 126.69000000000001 -0.02349126960036375" scale="-0.81 0.72 -0.11" cursor-listener="" link="href: right_entrance.html"></a-entity>
         </a-sky>
     </a-scene>
 </body>
