--- a/MR/templates/right-way-1.html
+++ b/MR/templates/right-way-1.html
@@ -17,6 +17,7 @@
 
             <img id="entance-right-1" src="../templates/assets/360 img/ENTRANCE-RIGTHT-GATE-PATH-0.jpg">
             <img id="right-exit" src="../templates/assets/icon/ENTRANCE-RIGHT-WAY-1.png">
+            <img id="arrow" src="../templates/assets/icon/arrow.png">
             
            
         </a-assets>
@@ -27,6 +28,7 @@
             
             
             <a-entity id="right-exit" geometry="height: 6; width: 6" material="src: #right-exit; transparent: true; emissiveIntensity: 0" position="-16.40222 4.72765 -35.53558" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-way-2.html"></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-16.40222 4.72765 -35.53558" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-way-2.html"></a-entity>
                   
                 
              </a-sky>
