--- a/MR/templates/right_entrance.html
+++ b/MR/templates/right_entrance.html
@@ -18,7 +18,7 @@
             <img id="entance-right" src="../templates/../templates/assets/360 img/ENTRANCE-RIGTHT.jpg">
                  <img id="arrow" src="../templates/assets/icon/arrow.png">
             <img id="arrow-1" src="../templates/assets/icon/arrow.png">
-            <img id="last" src="../templates/assets/icon/ENTRANCE-RIGHT.png">
+            <img id="last" src="../templates/assets/icon/arrow.png">
             <img id="entrance" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
             <img id="last" src="../templates/assets/360 img/ENTRANCE-RIGTHT-1.jpg">
         </a-../templates/assets>
@@ -27,11 +27,11 @@
         </a-entity>
         <a-sky id="image-360" src="#entance-right">
             
-            <a-entity id="last" geometry="height: 6; width: 6" material="src:#last; transparent: true; emissiveIntensity: 0" position="-12.32658 3.25994 26.69404" rotation="-7.932590000000001 -20 -3.9934899999999995" scale="0.98 0.97 -0.001" cursor-listener="" link="href: right-center.html"></a-entity>
+            <a-entity id="last" geometry="height: 6; width: 6" material="src: #last; transparent: true; emissiveIntensity: 0" position="-11.17783 2.28151 26.79172" rotation="-4.762590000000001 -39.73 -4.263" scale="0.98 0.72 -0.001" cursor-listener="" link="href: right-center.html"></a-entity>
             
-            <a-entity id="arrow" geometry="height: 6; width: 6" material="src:#arrow; transparent: true; emissiveIntensity: 0" position="8.62627 -0.14268 -15.97078" rotation="-27.37259 -201.29 -6.96349" scale="-0.65 0.87 -0.141" cursor-listener="" link="href: entrance-2.html" visible=""></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src:#arrow; transparent: true; emissiveIntensity: 0" position="8.62627 -0.14268 -15.97078" rotation="-27.37259 -201.29 -6.96349" scale="-0.65 0.72 -0.141" cursor-listener="" link="href: entrance-2.html" visible=""></a-entity>
         
-            <a-entity id="arrow-1" geometry="height: 6; width: 10" material="src:#arrow-1; transparent: true; emissiveIntensity: 0" position="-3.59748 -0.35585 -18.39954" rotation="1.29741 -49.20592 -0.02349126960036375" scale="1 0.34 -0.021" cursor-listener="" link="href: entrance.html"></a-entity>
+            <a-entity id="arrow-1" geometry="height: 6; width: 10" material="src:#arrow-1; transparent: true; emissiveIntensity: 0" position="-3.59748 -0.35585 -18.39954" rotation="1.29741 -49.20592 -0.02349126960036375" scale="1 0.720 -0.021" cursor-listener="" link="href: entrance.html"></a-entity>
                   
                 
              </a-sky>
