--- a/MR/templates/page/login.html
+++ b/MR/templates/page/login.html
@@ -45,7 +45,7 @@
             <div class="right"></div>
         </div>
         <div class="bottom">
-            <a href="/about/">
+            <a href="/about">
                 <div class="content">
                     Enter VR
                     <i class="fa-solid fa-vr-cardboard" style="padding-left: 10%;"></i>
