--- a/MR/templates/page/home.html
+++ b/MR/templates/page/home.html
@@ -1,37 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    {% load static %}
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="{% static 'css/home.css'%}">
-    <script src="{% static 'js/home.js'%}"></script>
+
 </head>
 
 <body>
     <div class="bg">
-        <nav>
-            <div class="nav-left">
-                <a href="/home"><img src="/static/img/icon.png" alt=""></a>
-            </div>
-            <div class="nav-right">
-                <div class="right-flex">
-                    <a id="home" href="/home">
-                        <div class="active">Home</div>
-                    </a>
-                    <a id="tour" href="/login">
-                        <div>Virtual Tour</div>
-                    </a>
-                    <a id="about" href="/about">
-                        <div>About Us</div>
-                    </a>
-                </div>
-            </div>
-        </nav>
-
+        {% include 'components/nav-bar.html' %}
     </div>
     <div class="centerArea">
         <div class="child">
@@ -47,5 +30,6 @@
         </div>
     </div>
 </body>
+<script src="{% static 'js/all.js'%}"></script>
 
 </html>
