--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,7 +11,7 @@
             box-sizing: border-box;
             outline: none;
             text-decoration: none;
-            text-transform: capitalize;
+            text-transform: uppercase;
             transition: all .2s linear;
         }
         
@@ -62,17 +62,18 @@
         nav .right-flex a {
             font-size: 20px;
             font-weight: 500;
-            text-transform: uppercase;
             color: var(--secondary);
             justify-content: space-between;
         }
         
-        nav .right-flex a .active {
-            color: var(--primary);
+        nav .right-flex a {
+            color: var(--secondary);
+            font-weight: 400;
         }
         
-        .active {
+        a .active {
             color: var(--primary);
+            font-weight: bold;
         }
         
         .centerArea {
