--- a/static/css/login.css
+++ b/static/css/login.css
@@ -126,3 +126,91 @@ input {
     font-weight: 200;
     align-items: center;
 }
+
+
+/* About Css */
+
+.row-container {
+    padding: 1rem;
+    display: inline-flex;
+    width: 100%;
+    height: 38rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.left-row {
+    background-image: url('/static/svg/about.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 37rem;
+    height: 23rem;
+}
+
+.right-row {
+    display: inline-flex;
+    width: 45%;
+    height: inherit;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.right-row .column-text {
+    text-transform: capitalize;
+    font-size: 2em;
+    font-weight: 300;
+}
+
+.right-row .column-text span {
+    font-weight: bold;
+    color: var(--primary);
+}
+
+.main-text {
+    text-transform: capitalize;
+    text-align: justify;
+    line-height: 1.5;
+    font-weight: 300;
+    font-size: 1.05rem;
+}
+
+.brmedium {
+    display: block;
+    margin-bottom: 1em;
+}
+
+.right-row .small-box {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.small-box .column img {
+    padding: 2%;
+    border-radius: 50%;
+    border: 6px solid var(--primary);
+}
+
+.small-box .column {
+    text-align: center;
+    display: inline-flex;
+    width: 16%;
+    text-transform: capitalize;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.column .text {
+    line-height: 1.5;
+    text-transform: initial;
+    font: 1rem;
+}
+
+.column .text span {
+    color: var(--primary);
+    font-weight: bold;
+    text-transform: initial;
+    font: 1.05rem;
+}
