--- a/static/css/home.css
+++ b/static/css/home.css
@@ -91,7 +91,7 @@
             font-size: 3rem;
             text-transform: uppercase;
             text-align: center;
-            color: white;
+            color: rgb(180, 176, 176);
         }
         
         .centerArea .text span {
