--- a/MR/templates/auditorium_front.html
+++ b/MR/templates/auditorium_front.html
@@ -15,7 +15,7 @@
     <a-scene>
         <a-assets>
 
-            <img id="books" src="../templates/assets/360 img/library_books.jpg">
+            <img id="front" src="../templates/assets/360 img/auditorium_front.jpg">
     
            
              
@@ -23,7 +23,7 @@
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
-        <a-sky id="image-360" src="#books">
+        <a-sky id="image-360" src="#front">
           </a-sky>
     </a-scene>
 </body>
