--- a/MR/templates/canteen.html
+++ b/MR/templates/canteen.html
@@ -15,9 +15,9 @@
     <a-scene>
         <a-assets>
 
-            <img id="front" src="../templates/assets/360 img/library_front.jpg">
+            <img id="front" src="../templates/assets/360 img/canteen.jpg">
             <img id="arrow" src="../templates/assets/icon/arrow.png">
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
+            
                 
            
              
@@ -26,8 +26,8 @@
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#front">
-            <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src:#arrow; transparent: true; emissiveIntensity: 0" position="-9.57073 0.40249 13.8082" rotation="3.3 220 0.587" scale="-3.45 0.72 -0.03" cursor-listener="" link="href: library_last.html"></a-entity>
-            <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="17.2745 4.29218 -4.06063" rotation="3.27 205.78 -9.563" scale="-2.79 -0.57 0.14" cursor-listener="" link="href: library_outer.html"></a-entity>
+            
+            <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-4.28788 1.75684 16.68479" rotation="3.27 116.25999999999999 -0.9630000000000001" scale="-0.98 -0.44 0.02" cursor-listener="" link="href: library_outer.html"></a-entity>
             
         </a-sky>
     </a-scene>
