--- a/MR/templates/library_last.html
+++ b/MR/templates/library_last.html
@@ -16,7 +16,8 @@
         <a-assets>
 
             <img id="last" src="../templates/assets/360 img/library_last.jpg">
-    
+            <img id="arrow" src="../templates/assets/icon/arrow.png">    
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png">    
            
              
         </a-assets>
@@ -24,6 +25,8 @@
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#last">
+            <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="47.66358 10.07183 -6.49348" rotation="3.09 220 -12.113" scale="-3.09 0.72 0.32" cursor-listener="" link="href: middle_library.html"></a-entity>
+            <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="-19.43108 6.18784 -71.26816" rotation="-10 288.29 -5" scale="-16.67 1.01 0.02" cursor-listener="" link="href: library_front.html"></a-entity>
           </a-sky>
     </a-scene>
 </body>
