--- a/MR/templates/main-center.html
+++ b/MR/templates/main-center.html
@@ -17,6 +17,9 @@
 
             <img id="entance-left" src="../templates/assets/360 img/MAIN-CENTER.jpg">
             <img id="exit" src="../templates/assets/icon/RECEPTION-OUT.png">
+            <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
+            <img id="arrow-2" src="../templates/assets/icon/arrow.png">
     
           </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
@@ -24,6 +27,9 @@
         </a-entity>
         <a-sky id="image-360" src="#entance-left">
             <a-entity id="exit" geometry="height: 6; width: 6" material="src: #exit; transparent: true; emissiveIntensity: 0" position="13.0114 2.58805 -4.27078" rotation="-15.993 -250.00000000000003 180.6" scale="0.72 -0.86 -0.17" cursor-listener="" background="" link="href: reception.html"></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0; side: back; width: 6" position="-13.17059 3.63049 1.72001" rotation="3.57 500.00000000000006 2.34" scale="-1.54999 0.47 0.01" cursor-listener="" background="" link="href: reception.html"></a-entity>
+            <a-entity id="arrow-1" geometry="height: 6; width: 6" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="2.78303 2.90208 -13.22278" rotation="-15.540000000000001 -138.57 166.74" scale="1.72 -0.72 -0.02" cursor-listener="" background="" link="href: waiting_hall_way.html"></a-entity>
+            <a-entity id="arrow-2" geometry="height: 6; width: 6" material="src: #arrow-2; transparent: true; emissiveIntensity: 0" position="0.86695 3.35605 17.89981" rotation="40 -138.57 200" scale="0.98 -0.72 -0.02" cursor-listener="" background="" link="href: library_outer.html"></a-entity>
              </a-sky>
     </a-scene>
 </body>
