--- a/MR/templates/middle_library.html
+++ b/MR/templates/middle_library.html
@@ -16,14 +16,16 @@
         <a-assets>
 
             <img id="middle" src="../templates/assets/360 img/middle_library.jpg">
-    
-           
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
+            <img id="arrow-2" src="../templates/assets/icon/arrow.png">
              
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#middle">
+            <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src:#arrow-1; transparent: true; emissiveIntensity: 0" position="9.57073 0.40249 13.8082" rotation="3.3 220 0.587" scale="-3.45 0.72 -0.03" cursor-listener="" link="href: middle_library.html"></a-entity>
+            <a-entity id="arrow-2" geometry="height: 6; width: 6; skipCache: true" material="src:#arrow-2; transparent: true; emissiveIntensity: 0" position="-9.22571 3.1018 -20.91071" rotation="0.99 336 0.787" scale="-1.93 0.72 0.15" cursor-listener="" link="href: library_last.html"></a-entity>
           </a-sky>
     </a-scene>
 </body>
