--- a/MR/templates/entrance.html
+++ b/MR/templates/entrance.html
@@ -19,6 +19,7 @@
             <img id="entrance-in" src="../templates/assets/icon/ENTRANCE-MAIN.png">
            
             <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
             <img id="entrance-1" src="../templates/assets/360 img/ENTRANCE-1.png">
             
         </a-assets>
@@ -28,7 +29,8 @@
         <a-sky id="image-360" src="#entrance-center">
             <a-text font="aileronsemibold" value="Entrance-In" width="6" position="-6.86838 2.47607 4.70854" scale="-2.46 2.99 -17.94" rotation="-7.02 -230.38000000000002 -0.7500000000000001" text="width: 5; align: center; color: #ffffff; side: back; negate: false; wrapCount: 38.85" visible=""></a-text>
            <a-entity id="entrance-in" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-22.74298 3.73781 15.08288" rotation="0.207410721837358 -44.20592 -1.58349" scale="1 1 -0.001" cursor-listener="" link="href: reception.html"></a-entity>
-           <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="6.04056 1.42667 -17.96215" rotation="0.01741 -135.87592 -0.02349126960036375" scale="1.88 0.72 0.099" cursor-listener="" link="href: entrance-2.html"></a-entity>
+           <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="6.04056 1.42667 -17.96215" rotation="0.01741 -135.87592 -0.02349126960036375" scale="1.88 0.72 0.019" cursor-listener="" link="href: entrance-2.html"></a-entity>
+           <a-entity id="arrow-1" geometry="height: 6; width: 6" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="17.82771 2.43619 15.90473" rotation="0.52741 -201.36592 -3.88349" scale="2.53 0.72 -0.201" cursor-listener="" link="href: right_entrance.html"></a-entity>
            </a-sky>
     </a-scene>
 </body>
