--- a/MR/templates/right-way-1.html
+++ b/MR/templates/right-way-1.html
@@ -28,7 +28,7 @@
             
             
             <a-entity id="right-exit" geometry="height: 6; width: 6" material="src: #right-exit; transparent: true; emissiveIntensity: 0" position="-16.40222 4.72765 -35.53558" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-way-2.html"></a-entity>
-            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-16.40222 4.72765 -35.53558" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-way-2.html"></a-entity>
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0; side: back" position="23.34198 2.57712 33.46513" rotation="0.207 117.36 -4.89349" scale="-8.08 1 0.12001" cursor-listener="" link="href: main_entrance.html"></a-entity>
                   
                 
              </a-sky>
