--- a/MR/templates/right-exit-1.html
+++ b/MR/templates/right-exit-1.html
@@ -28,7 +28,7 @@
             
             
             <a-entity id="right-exit" geometry="height: 6; width: 6" material="src: #right-exit; transparent: true; emissiveIntensity: 0" position="8.79177 1.35744 11.1095" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-center.html"></a-entity>           
-            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="8.79177 1.35744 11.1095" rotation="0.207410721837358 40 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-center.html"></a-entity>           
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-8.02162 1.97808 7.32833" rotation="1.57741 -122.78 6.80651" scale="3.01 0.61 -0.001" cursor-listener="" link="href: right-way-2.html"></a-entity>
                   
                 
              </a-sky>
