--- a/MR/templates/right-way-2.html
+++ b/MR/templates/right-way-2.html
@@ -16,7 +16,8 @@
         <a-assets>
 
             <img id="entance-right-1" src="../templates/assets/360 img/ENTRANCE-RIGTHT-GATE-PATH.jpg">
-            <img id="right-exit" src="../templates/assets/icon/ENTRANCE-RIGHT-WAY-2.png">
+            <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
             
            
         </a-assets>
@@ -26,8 +27,8 @@
         <a-sky id="image-360" src="#entance-right-1">
             
             
-            <a-entity id="right-exit" geometry="height: 6; width: 6" material="src: #right-exit; transparent: true; emissiveIntensity: 0" position="14.49549 0.30882 -12.67198" rotation="0.207410721837358 -34.98 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: right-exit-1.html"></a-entity>
-                
+            <a-entity id="arrow" geometry="height: 6; width: 6" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="15.21666 1.92257 -12.4998" rotation="0.207410721837358 -120.74 -7.70349" scale="1.45 0.73 -0.001" cursor-listener="" link="href: right-exit-1.html"></a-entity>
+            <a-entity id="arrow-1" geometry="height: 6; width: 6" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="17.15262 1.79564 10.83689" rotation="3.92741 -133.11 -1.21349" scale="-0.007 0.73 -24.381" cursor-listener="" link="href: right-way-1.html"></a-entity>
              </a-sky>
     </a-scene>
 </body>
