--- a/MR/templates/waiting_hall_way.html
+++ b/MR/templates/waiting_hall_way.html
@@ -17,7 +17,7 @@
 
             <img id="way" src="../templates/assets/360 img/waiting_hall_way.jpg">
             <img id="arrow" src="../templates/assets/icon/arrow.png">    
-           
+            <img id="arrow-1" src="../templates/assets/icon/arrow.png"> 
              
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
@@ -25,6 +25,7 @@
         </a-entity>
         <a-sky id="image-360" src="#way">
             <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="12.33684 2.98487 19.08681" rotation="0.74 127.69 -6.053" scale="-6.2 0.5 0.01" cursor-listener="" link="href: waiting_hall.html"></a-entity>
+            <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="-15.5531 2.99946 -14.75689" rotation="-1.6 130.95 7.447000000000001" scale="-6.2 0.5 -0.01" cursor-listener="" link="href: right-way-2.html"></a-entity>
           </a-sky>
     </a-scene>
 </body>
