--- a/MR/templates/canteen.html
+++ b/MR/templates/canteen.html
@@ -7,28 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="front" src="../templates/assets/360 img/canteen.jpg">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
-            
-                
-           
-             
+            <img id="front" src="/static/360 img/canteen.jpg">
+            <img id="arrow" src="/static/icon/arrow.png">
+
+
+
+
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#front">
-            
-            <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-4.28788 1.75684 16.68479" rotation="3.27 116.25999999999999 -0.9630000000000001" scale="-0.98 -0.44 0.02" cursor-listener="" link="href: library_outer.html"></a-entity>
-            
+
+            <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow; transparent: true; emissiveIntensity: 0" position="-4.28788 1.75684 16.68479" rotation="3.27 116.25999999999999 -0.9630000000000001" scale="-0.98 -0.44 0.02" cursor-listener=""
+                link="href: library_outer.html"></a-entity>
+
         </a-sky>
     </a-scene>
 </body>
