--- a/MR/templates/conferece_hall.html
+++ b/MR/templates/conferece_hall.html
@@ -15,16 +15,16 @@
     <a-scene>
         <a-assets>
 
-            <img id="front" src="../templates/assets/360 img/conference_hall_front.jpg">
-    
-           
-             
+            <img id="front" src="/static/360 img/conference_hall_front.jpg">
+
+
+
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#front">
-          </a-sky>
+        </a-sky>
     </a-scene>
 </body>
 
