--- a/MR/templates/library_front.html
+++ b/MR/templates/library_front.html
@@ -15,12 +15,12 @@
     <a-scene>
         <a-assets>
 
-            <img id="front" src="../templates/assets/360 img/library_front.jpg">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
-                
-           
-             
+            <img id="front" src="/static/360 img/library_front.jpg">
+            <img id="arrow" src="/static/icon/arrow.png">
+            <img id="arrow-1" src="/static/icon/arrow.png">
+
+
+
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
@@ -28,7 +28,7 @@
         <a-sky id="image-360" src="#front">
             <a-entity id="arrow" geometry="height: 6; width: 6; skipCache: true" material="src:#arrow; transparent: true; emissiveIntensity: 0" position="-9.57073 0.40249 13.8082" rotation="3.3 220 0.587" scale="-3.45 0.72 -0.03" cursor-listener="" link="href: library_last.html"></a-entity>
             <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="17.2745 4.29218 -4.06063" rotation="3.27 205.78 -9.563" scale="-2.79 -0.57 0.14" cursor-listener="" link="href: library_outer.html"></a-entity>
-            
+
         </a-sky>
     </a-scene>
 </body>
