--- a/MR/templates/page/login.html
+++ b/MR/templates/page/login.html
@@ -9,7 +9,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'css/login.css'%}">
     <link rel="stylesheet" href="{% static 'css/fontawesome-free-6.1.1-web/css/all.css'%}">
-    <script src="{% static 'js/home.js'%}"></script>
+
 </head>
 
 <body>
@@ -18,14 +18,15 @@
             <span> User Detials</span> <br> For Better Experience
         </div>
     </nav>
-    <form action="/about/" method="post">
+    <form id="form-data" action="/chat" method="POST" onsubmit="ValidateForm()">
         {% csrf_token %}
+
         <div class="middle">
             <div class="left">
                 <div class="form">
                     <div class="leading">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" name="userName" placeholder="Name">
+                        <input type="text" name="userName" placeholder="Name" required minlength="1">
                     </div>
                     <div class="leading">
                         <i class="fa-solid fa-mobile-button"></i>
@@ -34,18 +35,21 @@
                     </div>
                     <div class="leading">
                         <i class="fa-solid fa-envelope"></i>
-                        <input type="email" name="emailId" placeholder="Email">
+                        <input type="email" name="emailId" placeholder="Email" style="text-transform: lowercase;">
                     </div>
                     <div class="leading">
                         <i class="fa-solid fa-venus-mars"></i>
                         <input type="text" name="gender" placeholder="Gender">
                     </div>
+
                 </div>
             </div>
             <div class="right"></div>
         </div>
         <div class="bottom">
-            <a href="/chat">
+
+            <a href="#" onclick="submitData();" role="button">
+
                 <div class="content">
                     Enter VR
                     <i class="fa-solid fa-vr-cardboard" style="padding-left: 10%;"></i>
@@ -54,6 +58,15 @@
             </a>
         </div>
     </form>
+    <script>
+        function ValidateForm() {
+            console.log("Fuck");
+        }
+
+        function submitData() {
+            document.forms['form-data'].submit();
+        }
+    </script>
 </body>
 
 </html>
