--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,36 @@
     transition: all .2s linear;
 }
 
+
+/* Scroll bar */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 10px;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 html {
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(to right, var(--secondary) 0%, var(--primary) 100%);
@@ -29,11 +59,63 @@ body {
 
 .outer-box {
     min-width: 800px;
+    display: inline-flex;
     max-width: 1000px;
     max-height: 800px;
     height: 95vh;
     background: #FFF;
     border-radius: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.outer-box .heading {
+    padding: 2rem;
+}
+
+.outer-box .row {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul {
+    list-style: none;
+}
+
+input {
+    width: 24rem;
+    padding-left: 2%;
+    padding-right: 2%;
+    text-transform: capitalize;
+    height: 30%;
+    border: 2px solid var(--primary);
+    border-radius: 6px;
+}
+
+.last-end input {
+    height: 2rem;
+    width: 21rem;
+}
+
+.log {
+    margin: 5px;
+    height: 30px;
+    border-radius: 5px;
+    font-weight: 300;
+    color: var(--primary);
+    padding: 5px;
+    background-color: transparent;
+    border: 2px solid;
+    text-align: center;
+    cursor: pointer;
+}
+
+.outer-box .column {
+    display: flex;
+    width: 19rem;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .container {
@@ -80,7 +162,6 @@ body {
 }
 
 .audio-btn {
-    height: 40px;
     display: flex;
     justify-content: right;
 }
@@ -88,8 +169,6 @@ body {
 .audio-btn button {
     margin: 5px;
     height: 40px;
-    width: 13%;
-    position: relative;
     background-color: var(--primary);
     color: white;
     border-radius: 5px;
@@ -127,5 +206,10 @@ body {
 #container video {
     border-radius: 5%;
     max-height: 11rem;
-    background-color: transparent;
+    background-color: black;
+}
+
+.red-row {
+    display: flex;
+    align-items: center;
 }
