--- a/MR/templates/main_entrance.html
+++ b/MR/templates/main_entrance.html
@@ -22,8 +22,10 @@
             <img id="entance" src="../templates/assets/360 img/ENTRANCE.jpg">
             <img id="entrance-logo" src="../templates/assets/icon/ENTRANCE.png">
             <img id="entrance-left" src="../templates/assets/icon/ENTRANCE-LEFT.png">
-            <img id="entrance-way-1" src="../templates/assets/icon/ENTRANCE-RIGHT-WAY-1.png"
-            
+            <img id="entrance-way-1" src="../templates/assets/icon/ENTRANCE-RIGHT-WAY-1.png">
+            <img id="library" src="../templates/assets/icon/library_icon.png">
+             <img id="conference" src="../templates/assets/icon/conferencehall_icon.png">
+             <img id="auditorium" src="../templates/assets/icon/auditorium_icon.png">
 
             <img id="entrance-1" src="/assets/360 img/ENTRANCE-1.jpg">
             
@@ -38,7 +40,10 @@
           
 <a-text font="aileronsemibold" value="Right-Entrance" width="6" position="3.54533 1.61611 4.56957" scale="-1.88 1.97 -0.94" rotation="-0.05 -141.25 -0.7500000000000001" text="width: 6.05; align: center; color: #ffffff; side: back" visible=""></a-text>
             <a-entity id="main-entance" geometry="height: 6; width: 6" material="src:#entrance-logo; transparent: true; emissiveIntensity: 0" position="-22.36205 -0.16473 15.86397" rotation="0 -46.8 0" scale="1 1 0.94" cursor-listener="" link="href: entrance-2.html"></a-entity>
-            
+            <a-entity id="library" geometry="height: 6; width: 6" material="src: #library; transparent: true; emissiveIntensity: 0" position="-21.0365 7.22989 26.23111" rotation="0 -46.8 0" scale="0.42 0.44 0.1" cursor-listener="" link="href: library_outer.html"></a-entity>
+            <a-entity id="conference" geometry="height: 6; width: 6" material="src: #conference; transparent: true; emissiveIntensity: 0" position="-19.66346 3.4139 24.6509" rotation="0 -46.8 0" scale="0.56 0.44 0.1" cursor-listener="" link="href: conference_hall.html"></a-entity>
+            <a-entity id="auditorium" geometry="height: 6; width: 6" material="src: #auditorium; transparent: true; emissiveIntensity: 0" position="-20.07091 -0.57795 25.22063" rotation="0 -46.8 0" scale="0.55 0.66 0.04" cursor-listener="" link="href: auditorium_front.html"></a-entity>
+        
           
             <a-entity id="entrance-way-1" geometry="height: 6; width: 6" material="src: #entrance-way-1; transparent: true; emissiveIntensity: 0" position="16.14807 3.22814 22.41545" rotation="0 40 0" scale="1 1 0.94" cursor-listener="" link="href: right-way-1.html"></a-entity>
         </a-sky>
