--- a/MR/templates/auditorium_front.html
+++ b/MR/templates/auditorium_front.html
@@ -10,15 +10,15 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/vr-main.css' %}">
-    <script src="../templates/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <div style="position:relative;"></div>
     <a-scene>
         <a-assets>
-            <img id="front" src="../templates/assets/360 img/auditorium_front.jpg">
-            <img id="out" src="../templates/assets/icon/audtorium-out.png">
+            <img id="front" src="/static/360 img/auditorium_front.jpg">
+            <img id="out" src="/static/icon/audtorium-out.png">
     
            
              
