--- a/MR/templates/library_outer.html
+++ b/MR/templates/library_outer.html
@@ -19,10 +19,10 @@
     <a-scene>
         <a-assets>
 
-            <img id="outer" src="../templates/assets/360 img/library_outer.jpg">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">    
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">    
-            <img id="arrow-2" src="../templates/assets/icon/arrow.png">    
+            <img id="outer" src="/static/360 img/library_outer.jpg">
+            <img id="arrow" src="/static/icon/arrow.png">    
+            <img id="arrow-1" src="/static/icon/arrow.png">    
+            <img id="arrow-2" src="/static/icon/arrow.png">    
 
            
              
