--- a/MR/templates/middle_library.html
+++ b/MR/templates/middle_library.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="middle" src="../templates/assets/360 img/middle_library.jpg">
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
-            <img id="arrow-2" src="../templates/assets/icon/arrow.png">
+            <img id="middle" src="/static/360 img/middle_library.jpg">
+            <img id="arrow-1" src="/static/icon/arrow.png">
+            <img id="arrow-2" src="/static/icon/arrow.png">
              
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
