--- a/MR/templates/waiting_hall.html
+++ b/MR/templates/waiting_hall.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="waiting_hall" src="../templates/assets/360 img/waiting_hall.jpg">
-            <img id="out" src="../templates/assets/icon/waitingroom-out.png">
-            <img id="conference-in" src="../templates/assets/icon/conferencehall_in.png">
+            <img id="waiting_hall" src="/static/360 img/waiting_hall.jpg">
+            <img id="out" src="/static/icon/waitingroom-out.png">
+            <img id="conference-in" src="/static/icon/conferencehall_in.png">
     
            
              
