--- a/MR/templates/conferece_hall.html
+++ b/MR/templates/conferece_hall.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
         <a-assets>
 
 
-            <img id="front" src="../templates/assets/360 img/conference_hall_front.jpg">
-            <img id="out" src="../templates/assets/icon/conferencehall_out.png">
+            <img id="front" src="/static/360 img/conference_hall_front.jpg">
+            <img id="out" src="/static/icon/conferencehall_out.png">
             <img id="front" src="/static/360 img/conference_hall_front.jpg">
 
 
