--- a/MR/templates/entrance-2.html
+++ b/MR/templates/entrance-2.html
@@ -8,24 +8,24 @@
     <title>Document</title>
     <script src="http://unpkg.com/aframe-arrow-component/"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
-    <script src="../templates/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entrance-1" src="../templates/assets/360 img/ENTRANCE-1.jpg">
-            <img id="exit" src="../templates/assets/icon/EXIT.png">
+            <img id="entrance-1" src="/static/360 img/ENTRANCE-1.jpg">
+            <img id="exit" src="/static/icon/EXIT.png">
     
-            <img id="entrance-in" src="../templates/assets/icon/ENTERANCE-IN-1.png">
-            <img id="entrance" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="entrance-in" src="/static/icon/ENTERANCE-IN-1.png">
+            <img id="entrance" src="/static/360 img/ENTRANCE-CENTER.jpg">
+            <img id="arrow" src="/static/icon/arrow.png">
            
-            <img id="entrance" src="../templates/assets/ENTRANCE-CENTER.jpg">
-            <img id="exit" src="../templates/assets/360 img/ENTRANCE.jpg">
+            <img id="entrance" src="/static/ENTRANCE-CENTER.jpg">
+            <img id="exit" src="/static/360 img/ENTRANCE.jpg">
             
         </a-assets>
         
