--- a/MR/templates/entrance.html
+++ b/MR/templates/entrance.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entrance-center" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
-            <img id="entrance-in" src="../templates/assets/icon/ENTRANCE-MAIN.png">
+            <img id="entrance-center" src="/static/360 img/ENTRANCE-CENTER.jpg">
+            <img id="entrance-in" src="/static/icon/ENTRANCE-MAIN.png">
            
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
-            <img id="entrance-1" src="../templates/assets/360 img/ENTRANCE-1.png">
+            <img id="arrow" src="/static/icon/arrow.png">
+            <img id="arrow-1" src="/static/icon/arrow.png">
+            <img id="entrance-1" src="/static/360 img/ENTRANCE-1.png">
             
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
