--- a/MR/templates/left_entrance.html
+++ b/MR/templates/left_entrance.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entance-left" src="../templates/assets/360 img/ENTRANCE-LEFT.jpg">
-            <img id="exit" src="../templates/assets/icon/LEFT-EXIT.png">
+            <img id="entance-left" src="/static/360 img/ENTRANCE-LEFT.jpg">
+            <img id="exit" src="/static/icon/LEFT-EXIT.png">
     
-            <img id="left-exit" src="../templates/assets/icon/ENTRANCE-LEFT-EXIT.png">
-            <img id="entrance-center" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
+            <img id="left-exit" src="/static/icon/ENTRANCE-LEFT-EXIT.png">
+            <img id="entrance-center" src="/static/360 img/ENTRANCE-CENTER.jpg">
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
