--- a/MR/templates/library_last.html
+++ b/MR/templates/library_last.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<<<<<<< HEAD
+
     <div style="position:relative;">
         <a-scene>
             <a-assets>
@@ -73,9 +73,9 @@
     <a-scene>
         <a-assets>
 
-            <img id="last" src="../templates/assets/360 img/library_last.jpg">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">    
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">    
+            <img id="last" src="/static/360 img/library_last.jpg">
+            <img id="arrow" src="/static/icon/arrow.png">    
+            <img id="arrow-1" src="/static/icon/arrow.png">    
             
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
@@ -86,7 +86,7 @@
             <a-entity id="arrow-1" geometry="height: 6; width: 6; skipCache: true" material="src: #arrow-1; transparent: true; emissiveIntensity: 0" position="-10.97023 4.31715 -28.14471" rotation="-356.43 366.58 -10" scale="-0.01 -1.87 -74.97" cursor-listener="" link="href: library_front.html"></a-entity>
           </a-sky>
     </a-scene>
->>>>>>> 322d6b191e482f4a52131e1ef671826c9fae9e0a
+
 </body>
 
 </html>
