--- a/MR/templates/right-center.html
+++ b/MR/templates/right-center.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="right-center" src="../templates/assets/360 img/ENTRANCE-RIGTHT-1.jpg">
+            <img id="right-center" src="/static/360 img/ENTRANCE-RIGTHT-1.jpg">
     
-            <img id="center" src="../templates/assets/icon/ENTRANCE-RIGHT-IN-GATE.png">
+            <img id="center" src="/static/icon/ENTRANCE-RIGHT-IN-GATE.png">
             
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="arrow" src="/static/icon/arrow.png">
              
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
