--- a/MR/templates/right-way-1.html
+++ b/MR/templates/right-way-1.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
         <a-assets>
 
-            <img id="entance-right-1" src="../templates/assets/360 img/ENTRANCE-RIGTHT-GATE-PATH-0.jpg">
-            <img id="right-exit" src="../templates/assets/icon/ENTRANCE-RIGHT-WAY-1.png">
-            <img id="arrow" src="../templates/assets/icon/arrow.png">
+            <img id="entance-right-1" src="/static/360 img/ENTRANCE-RIGTHT-GATE-PATH-0.jpg">
+            <img id="right-exit" src="/static/icon/ENTRANCE-RIGHT-WAY-1.png">
+            <img id="arrow" src="/static/icon/arrow.png">
             
            
         </a-assets>
