--- a/MR/templates/right_entrance.html
+++ b/MR/templates/right_entrance.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="../templates/css/main.css">
-    <script src="../templates/js/main.js"></script>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/main.js"></script>
 </head>
 
 <body>
     <a-scene>
-        <a-../templates/assets>
+        <a-/static/assets>
 
-            <img id="entance-right" src="../templates/../templates/assets/360 img/ENTRANCE-RIGTHT.jpg">
-                 <img id="arrow" src="../templates/assets/icon/arrow.png">
-            <img id="arrow-1" src="../templates/assets/icon/arrow.png">
-            <img id="last" src="../templates/assets/icon/arrow.png">
-            <img id="entrance" src="../templates/assets/360 img/ENTRANCE-CENTER.jpg">
-            <img id="last" src="../templates/assets/360 img/ENTRANCE-RIGTHT-1.jpg">
-        </a-../templates/assets>
+            <img id="entance-right" src="/static/360 img/ENTRANCE-RIGTHT.jpg">
+                 <img id="arrow" src="/static/icon/arrow.png">
+            <img id="arrow-1" src="/static/icon/arrow.png">
+            <img id="last" src="/static/icon/arrow.png">
+            <img id="entrance" src="/static/360 img/ENTRANCE-CENTER.jpg">
+            <img id="last" src="/static/360 img/ENTRANCE-RIGTHT-1.jpg">
+        </a-/static/assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
