--- a/static/css/main.css
+++ b/static/css/main.css
@@ -217,3 +217,41 @@ input {
 .row button {
     height: 2rem;
 }
+
+.left-entrance
+{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 7rem;
+    
+    height: 23rem;
+    z-index: 1000;
+}
+
+.left-entrance .left-content
+{
+    display: flex;
+    flex-direction: column;
+    padding: 12%;
+    height: 21rem;
+    justify-content: space-around;
+}
+
+p
+{
+    color: var(--primary);
+    font-weight: bold;
+    text-align: center;
+}
+.img-doc  img
+{
+height: 3rem;
+}
+
+.img-doc
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
