--- a/MR/templates/page/login.html
+++ b/MR/templates/page/login.html
@@ -18,7 +18,7 @@
             <span> User Detials</span> <br> For Better Experience
         </div>
     </nav>
-    <form id="form-data" action="/chat" method="POST" onsubmit="ValidateForm()">
+    <form id="form-data" action="/vr" method="POST" onsubmit="ValidateForm()">
         {% csrf_token %}
 
         <div class="middle">
