--- a/MR/templates/library_outer.html
+++ b/MR/templates/library_outer.html
@@ -38,7 +38,7 @@
           </a-sky>
     </a-scene>
     <div style="position:relative;">
-        <!-- <a-scene>
+        <a-scene>
             <a-assets>
 
                 <img id="outer" src="{% static '360 img/library_outer.jpg' %}">
@@ -58,7 +58,7 @@
                     link="href: library_front.html"></a-entity>
                 <a-entity id="arrow-2" geometry="height: 6; width: 6; skipCache: true" material="src:#arrow-2; transparent: true; emissiveIntensity: 0" position="-14.64244 4.16483 32.11311" rotation="-2.82 400 -10.253" scale="-3.14 0.72 -0.050" cursor-listener="" link="href: canteen.html"></a-entity>
             </a-sky>
-        </a-scene> -->
+        </a-scene>
         <div class="main">
             <div class="body">
                 <div class="menu-body">
