--- a/MR/templates/reception.html
+++ b/MR/templates/reception.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    {% load static %}
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vr-main.css' %}">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/vr-main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
 </head>
 
@@ -17,9 +17,9 @@
     <div style="position:relative;">
         <a-scene>
             <a-assets>
-                <img id="entance-left" src="{% static '360 img/RECEPTION.jpg' %}">
-                <img id="exit" src="{% static 'icon/MAIN-CENTER.png' %}">
-                <img id="exit-1" src="{% static 'icon/RECEPTION-OUT.png' %}">
+                <img id="entance-left" src="/static/360 img/RECEPTION.jpg">
+                <img id="exit" src="/static/icon/MAIN-CENTER.png">
+                <img id="exit-1" src="/static/icon/RECEPTION-OUT.png">
             </a-assets>
             <a-entity id="camera" camera mouse-cursor look-controls>
                 <a-cursor fuse="true" color="white"></a-cursor>
