--- a/MR/templates/page/login.html
+++ b/MR/templates/page/login.html
@@ -18,9 +18,8 @@
             <span> User Detials</span> <br> For Better Experience
         </div>
     </nav>
-    <form id="form-data" action="/vr" method="POST" onsubmit="ValidateForm()">
+    <form id="form-data" action="/vr" method="POST">
         {% csrf_token %}
-
         <div class="middle">
             <div class="left">
                 <div class="form">
